@@ -80,6 +80,9 @@ Updated wx.lib.calendar with many fixes and enhancements from Joerg
 
 Added wx.Display and wx.VideoMode.
 
+AppleEvents can be handled by overriding wx.App methods MacOpenFile,
+MacPrintFile, MacNewFile, and MacReopenApp.
+
 
 
 
